<resources>
    <string name="app_name">Baby Steps</string>
    <string name="image_content_desc">Image of the respective week</string>
    <string name="label_babys_information">Baby`s information</string>
    <string name="label_baby_name">Baby`s name:</string>
    <string name="label_date_of_birth">Date of birth</string>
    <string name="label_measurement_units">Measurement units</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_milk_type">Milk type</string>
    <string name="label_details">Details</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_breast_feeding">Breast feeding</string>
    <string name="btn_bottle">Bottle</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="receive_notifications">Receive notifications</string>
    <string name="time_of_the_notification">Time of the notification</string>
    <string name="time_picker_title">Select preferred time</string>
    <string name="feeding_in_progress">Feeding in progress.</string>
    <string name="breast_feeding">Breast feeding</string>
    <string name="bottle_feeding">Bottle feeding</string>
    <string name="breast_milk">Breast milk</string>
    <string name="formula">Formula</string>
    <string name="start_date_and_time">Start date and time</string>
    <string name="end_date_and_time">End date and time</string>
    <string name="default_value_week_title">Please select date of birth.</string>
    <string name="no_items_to_show">No items to show.</string>
    <string name="content_desc_edit_delete_feeding">Edit or delete feeding icon</string>
    <string name="date">Date</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="head">Head</string>

    <!-- Formatted strings, dates, time and units -->
    <string name="format_kg">%.3fkg</string>
    <string name="format_lb">%.2flb</string>
    <string name="format_cm">%.2fcm</string>
    <string name="format_in">%.2fin</string>
    <string name="format_ml">%.2fml</string>
    <string name="format_oz">%.2foz</string>
    <string name="format_breast_feeding_item">%s, %s, %dmin</string>
    <string name="format_bottle_feeding_item">%s, %s, %s, %s</string>
    <string name="month_abbrev_growth_age">m</string>
    <string name="time_format">%02d:%02d</string>
    <string name="lb_in_oz">lb/in/oz</string>
    <string name="kg_cm_ml">kg/cm/ml</string>
    <string name="days">d\u0020</string>
    <string name="hours">h\u0020</string>
    <string name="minutes">min\u0020</string>
    <string name="seconds">sec\u0020</string>
    <string name="format_notification_title">Your baby is%s%s old!</string>
    <string name="format_str_latest_activity">Latest activity: %sago</string>
    <string name="month_expression">-month</string>
    <string name="week_expression">-week</string>
    <string name="latest_activity_no_info">Latest activity: no information</string>
    <string name="default_notification_time">09:00</string>
    <string name="hint_weight">Weight in kg/lb</string>
    <string name="hint_height">Height in cm/in</string>
    <string name="hind_head">Head in cm/in</string>

    <!-- Messages and error messages -->
    <string name="msg_provide_date_of_birth">Please provide date of birth.</string>
    <string name="msg_add_baby">Please select name and date of birth of the baby.</string>
    <string name="msg_provide_name">Please provide name. Name cannot be null.</string>
    <string name="msg_feeding_saved">Feeding successfully saved!</string>
    <string name="msg_provide_notification_time">Please provide time for the notification.</string>
    <string name="msg_error_loading_posts">Error loading posts.</string>
    <string name="msg_error_saving_posts">Error saving posts.</string>
    <string name="msg_provide_quantity">Please provide quantity.</string>
    <string name="msg_end_time_before_start_time">End time cannot be before start time</string>
    <string name="msg_provide_baby_info">Select date of birth before saving feeding or growth.</string>
    <string name="msg_provide_valid_numbers">Please provide valid numbers for weight, height and head.</string>
    <string name="msg_no_internet">No internet connection.</string>
    <string name="msg_notification_body">Click to view more information about your baby`s development at this stage!</string>
    <string name="msg_invalid_date">Date cannot be before baby`s date of birth.</string>

    <!-- Strings keys used in some activities -->
    <string name="feeding_in_progress_key" translatable="false">FEEDING_IN_PROGRESS</string>
    <string name="start_time_key" translatable="false">START_TIME</string>

    <!-- Strings related to local Shared Preference storage -->
    <string name="pref_baby_name" translatable="false">pref_baby_name</string>
    <string name="pref_date_of_birth" translatable="false">pref_date_of_birth</string>
    <string name="pref_time_of_notification" translatable="false">pref_time_of_notification</string>
    <string name="pref_receive_notifications" translatable="false">pref_receive_notifications</string>
    <string name="pref_timer_start_time" translatable="false">pref_start_time</string>
    <string name="pref_feeding_in_progress" translatable="false">pref_feeding_in_progress</string>
    <string name="pref_metric_units" translatable="false">pref_metric_units</string>
    <string name="pref_week_title" translatable="false">pref_week_title</string>
    <string name="pref_week_image_url" translatable="false">pref_week_image_url</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

</resources>
