<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/label_notification_info"
        android:text="@string/label_notifications"
        style="@style/TvTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_notification_run"
        style="@style/TextLabel"
        android:text="@string/receive_notifications"
        app:layout_constraintTop_toBottomOf="@id/label_notification_info"/>

    <TextView
        android:id="@+id/label_time_of_notification"
        style="@style/TextLabel"
        android:text="@string/time_of_the_notification"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/switch_notification_run"/>

    <TextView
        android:id="@+id/tv_time_of_notification"
        style="@style/TextView"
        android:layout_marginTop="@dimen/padding_8dp"
        app:layout_constraintTop_toBottomOf="@id/label_time_of_notification"
        tools:text="21:00" />

</android.support.constraint.ConstraintLayout >