<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_8dp">

    <TextView
        android:id="@+id/dialog_title"
        android:padding="@dimen/padding_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/breast_feeding"
        android:textSize="@dimen/txt_size_16sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/label_start_date"
        style="@style/TextLabel"
        android:text="@string/start_date_and_time"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"/>

    <TextView
        android:id="@+id/tv_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_8dp"
        tools:text="21Sep18, 18h43"
        app:layout_constraintTop_toBottomOf="@id/label_start_date"/>

    <TextView
        android:id="@+id/label_end_date"
        style="@style/TextLabel"
        android:text="@string/end_date_and_time"
        app:layout_constraintTop_toBottomOf="@id/tv_start_date"/>

    <TextView
        android:id="@+id/tv_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_8dp"
        tools:text="21Sep18, 18h43"
        app:layout_constraintTop_toBottomOf="@id/label_end_date"/>

    <TextView
        android:id="@+id/label_details"
        style="@style/TextLabel"
        app:layout_constraintTop_toBottomOf="@id/tv_end_date"
        android:text="@string/label_details"/>

    <EditText
        android:id="@+id/et_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_8dp"
        app:layout_constraintTop_toBottomOf="@id/label_details"
        android:inputType="text"
        tools:text="Some details"/>



</android.support.constraint.ConstraintLayout>