<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_8dp">

    <TextView
        android:id="@+id/dialog_title"
        android:padding="@dimen/padding_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottle_feeding"
        android:textSize="@dimen/txt_size_16sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/label_milk_type"
        style="@style/TextLabel"
        android:text="@string/label_milk_type"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"/>

    <Spinner
        android:id="@+id/spinner_milk_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/label_quantity"
        style="@style/TextLabel"
        android:layout_marginTop="@dimen/padding_8dp"
        app:layout_constraintTop_toBottomOf="@id/label_milk_type"
        android:text="@string/label_quantity"/>

    <EditText
        android:id="@+id/et_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_8dp"
        app:layout_constraintTop_toBottomOf="@id/label_quantity"
        android:inputType="number"
        tools:text="100ml"/>

    <TextView
        android:id="@+id/label_details"
        style="@style/TextLabel"
        app:layout_constraintTop_toBottomOf="@id/et_quantity"
        android:text="@string/label_details"/>

    <EditText
        android:id="@+id/et_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_8dp"
        app:layout_constraintTop_toBottomOf="@id/label_details"
        android:inputType="text"
        tools:text="Some details"/>



</android.support.constraint.ConstraintLayout>